@@ -27,84 +27,92 @@ import com.eolwral.osmonitor.ipc.IpcService;
 import com.eolwral.osmonitor.settings.Settings;
 
 public class CommonUtil {
-  
+
   /**
-  * predefine location for osmcore
-  */
+   * predefine location for osmcore
+   */
   private final static String binaryName = "osmcore";
-  
+
   /**
    * bring up help activity
-   * @param context  
-   * @param url 
+   * 
+   * @param context
+   * @param url
    */
-  public static void showHelp(Context context, String url)
-  {
+  public static void showHelp(Context context, String url) {
+    // To use try-catch and avoid Activity is not ready
     try {
       Intent intent = new Intent(Intent.ACTION_VIEW);
       intent.setData(Uri.parse(url));
       context.startActivity(intent);
-    } catch (ActivityNotFoundException e) {}
+    } catch (ActivityNotFoundException e) {
+    }
   }
-  
+
   /**
-   * kill a process 
+   * kill a process
+   * 
    * @param pid
    * @param context
    */
   public static void killProcess(int pid, Context context) {
     final Settings settings = Settings.getInstance(context);
-    if (!settings.isRoot()) 
+    if (!settings.isRoot())
       android.os.Process.killProcess(pid);
     else
       IpcService.getInstance().killProcess(pid);
   }
 
-
   /**
    * is ARMv7 base ?
+   * 
    * @return true == yes , false == no
    */
   public static boolean isARMv7() {
     return (android.os.Build.CPU_ABI.toLowerCase().contains("armeabi-v7"));
   }
-  
+
   /**
    * is ARM base ?
+   * 
    * @return true == yes , false == no
    */
   public static boolean isARM() {
     return (android.os.Build.CPU_ABI.toLowerCase().contains("armeabi"));
   }
-  
+
   /**
    * is MIPS base ?
+   * 
    * @return true == yes, false == no
    */
   public static boolean isMIPS() {
-    return (android.os.Build.CPU_ABI.toLowerCase().contains("mips"));   
+    return (android.os.Build.CPU_ABI.toLowerCase().contains("mips"));
   }
-  
+
   /**
    * is X86 base ?
+   * 
    * @return true == yes, false == no
    */
   public static boolean isX86() {
-    return (android.os.Build.CPU_ABI.toLowerCase().contains("x86"));    
+    return (android.os.Build.CPU_ABI.toLowerCase().contains("x86"));
   }
-  
+
   /**
    * is Android Lollipop ?
+   * 
    * @return true == yes, false == no
    */
   public static boolean isLollipop() {
-    return (Build.VERSION.RELEASE.equals("L") ||
-            Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP);    
+    return (Build.VERSION.RELEASE.equals("L") || Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP);
   }
-  
+
   /**
    * check file status
-   * @param file path
+   * 
+   * @param file
+   *          path
    * @return true == exist, false == not exist
    */
   @SuppressWarnings("unused")
@@ -112,38 +120,43 @@ public class CommonUtil {
     File targetFile = new File(localPath);
     return targetFile.exists();
   }
-  
+
   /**
    * check SQLite DB status
-   * @param context Context
-   * @param dbName database name
-   * @return true == exist, false == not exist 
+   * 
+   * @param context
+   *          Context
+   * @param dbName
+   *          database name
+   * @return true == exist, false == not exist
    */
   public static boolean doesDatabaseExist(Context context, String dbName) {
-    File dbFile=context.getDatabasePath(dbName);
+    File dbFile = context.getDatabasePath(dbName);
     return dbFile.exists();
   }
-  
+
   /**
    * copy a binary from asset directory to working directory.
+   * 
    * @param assetPath
    * @param localPath
    * @param context
    * @return true == copied, false == text busy
    */
-  private static boolean copyFile(String assetPath, String localPath, Context context) {
+  private static boolean copyFile(String assetPath, String localPath,
+      Context context) {
     try {
 
       // detect architecture
-      if (isARM()) 
+      if (isARM())
         assetPath += "_arm";
-      else if (isX86()) 
-        assetPath += "_x86";  
-      else if  (isMIPS())
+      else if (isX86())
+        assetPath += "_x86";
+      else if (isMIPS())
         assetPath += "_mips";
       else
-        assetPath += "_arm"; 
-      
+        assetPath += "_arm";
+
       if (isLollipop())
         assetPath += "_l";
 
@@ -153,7 +166,7 @@ public class CommonUtil {
       int read = 0;
       byte[] buffer = new byte[4096];
 
-      while ((read = binary.read(buffer)) > 0) 
+      while ((read = binary.read(buffer)) > 0)
         execute.write(buffer, 0, read);
 
       execute.close();
@@ -167,16 +180,19 @@ public class CommonUtil {
     }
     return true;
   }
-  
+
   /**
-   * write a security token file 
-   * @param tokenFilePath path of the security token
-   * @param token security token
+   * write a security token file
+   * 
+   * @param tokenFilePath
+   *          path of the security token
+   * @param token
+   *          security token
    * @return true or false
    */
   private static boolean writeTokenFile(String tokenFilePath, String token) {
     try {
-      FileWriter file  = new FileWriter(tokenFilePath, false);
+      FileWriter file = new FileWriter(tokenFilePath, false);
       file.write(token);
       file.close();
     } catch (IOException e) {
@@ -184,30 +200,31 @@ public class CommonUtil {
     }
     return true;
   }
-  
+
   /**
    * execute osmcore as a binary execute
+   * 
    * @param context
-   * @throws InterruptedException 
+   * @throws InterruptedException
    */
   public static boolean execCore(Context context) {
 
-    if(context == null)
+    if (context == null)
       return false;
 
-    String binary = context.getFilesDir().getAbsolutePath()+"/"+binaryName;
+    String binary = context.getFilesDir().getAbsolutePath() + "/" + binaryName;
     final Settings settings = Settings.getInstance(context);
 
-    // copy file 
-    if(!copyFile("osmcore", binary, context))
-      return false; 
+    // copy file
+    if (!copyFile("osmcore", binary, context))
+      return false;
 
     // write token file
-    if(!writeTokenFile(binary+".token", settings.getToken()))
+    if (!writeTokenFile(binary + ".token", settings.getToken()))
       return false;
 
     // lock file
-    File file = new File(binary+".lock");
+    File file = new File(binary + ".lock");
     FileChannel channel = null;
     FileLock lock = null;
     try {
@@ -218,38 +235,45 @@ public class CommonUtil {
     }
 
     // execute osmcore
-    try { 
-      Runtime.getRuntime().exec(new String [] {"chmod", "755", binary}).waitFor();
+    try {
+      Runtime.getRuntime().exec(new String[] { "chmod", "755", binary })
+          .waitFor();
 
       if (!settings.isRoot()) {
-        Runtime.getRuntime().exec( new String [] { "sh", "-c", binary+" "+binary+".token &" }).waitFor();
-      }
-      else {
+        Runtime
+            .getRuntime()
+            .exec(
+                new String[] { "sh", "-c", binary + " " + binary + ".token &" })
+            .waitFor();
+      } else {
         if (!isLollipop()) {
-          Runtime.getRuntime().exec( new String [] { "su", "-c", binary+" "+binary+".token &" }).waitFor();
-        }
-        else {
-          Process process = Runtime.getRuntime().exec( new String [] { "su" });
+          Runtime
+              .getRuntime()
+              .exec(
+                  new String[] { "su", "-c", binary + " " + binary + ".token &" })
+              .waitFor();
+        } else {
+          Process process = Runtime.getRuntime().exec(new String[] { "su" });
           DataOutputStream os = new DataOutputStream(process.getOutputStream());
-          os.writeBytes("cp "+binary+" "+binary+"_L \n");
-          os.writeBytes("chmod 755 "+binary+"_L \n");
-          os.writeBytes("chcon u:object_r:system_file:s0 "+binary+"_L \n");
-          os.writeBytes("su --context u:r:system_app:s0 -c \""+binary+"_L "+binary+".token &\" \n");
+          os.writeBytes("cp " + binary + " " + binary + "_L \n");
+          os.writeBytes("chmod 755 " + binary + "_L \n");
+          os.writeBytes("chcon u:object_r:system_file:s0 " + binary + "_L \n");
+          os.writeBytes("su --context u:r:system_app:s0 -c \"" + binary + "_L "
+              + binary + ".token &\" \n");
           os.writeBytes("exit\n\n");
           os.flush();
           Thread.sleep(1000);
           process.destroy();
 
-          process = Runtime.getRuntime().exec( new String [] { "su" });
+          process = Runtime.getRuntime().exec(new String[] { "su" });
           os = new DataOutputStream(process.getOutputStream());
-          os.writeBytes("rm "+binary+"_L \n");
+          os.writeBytes("rm " + binary + "_L \n");
           os.writeBytes("exit\n\n");
           os.flush();
           process.wait(3500);
           process.destroy();
         }
       }
-
 
     } catch (Exception e) {
       return false;
@@ -259,17 +283,19 @@ public class CommonUtil {
     try {
       lock.release();
       channel.close();
-    } catch (Exception e) {}
+    } catch (Exception e) {
+    }
 
     return true;
   }
-  
+
   /**
    * detect that Device is rooted or not
+   * 
    * @return true == rooted, false == non-rooted
    */
   public static boolean preCheckRoot() {
-    boolean flag = false; 
+    boolean flag = false;
 
     try {
       Process process = Runtime.getRuntime().exec("su");
@@ -277,57 +303,65 @@ public class CommonUtil {
       os.writeBytes("exit \n");
       process.waitFor();
 
-      if(process.exitValue() == 0)
+      if (process.exitValue() == 0)
         flag = true;
 
-    } catch (Exception e) { }
+    } catch (Exception e) {
+    }
 
     return flag;
   }
-  
-  
+
   /**
-   * convert data as memory 
+   * convert data as memory
+   * 
    * @param data
    * @return a string with correct format
    *
-   * Reference:
-   * http://stackoverflow.com/questions/3758606/how-to-convert-byte-size-into-human-readable-format-in-java
+   *         Reference:
+   *         http://stackoverflow.com/questions/3758606/how-to-convert
+   *         -byte-size-into-human-readable-format-in-java
    */
   @SuppressLint("DefaultLocale")
   public static String convertToSize(long data, boolean si) {
     int unit = si ? 1000 : 1024;
-    if (data < unit) return data + " B";
+    if (data < unit)
+      return data + " B";
     int exp = (int) (Math.log(data) / Math.log(unit));
-    String pre = (si ? "kMGTPE" : "KMGTPE").charAt(exp-1) + (si ? "" : "i");
+    String pre = (si ? "kMGTPE" : "KMGTPE").charAt(exp - 1) + (si ? "" : "i");
     return String.format("%.1f %sB", data / Math.pow(unit, exp), pre);
   }
-  
+
   /**
    * convert data as Usage
+   * 
    * @param data
    * @return a string of float value
    */
   @SuppressLint("DefaultLocale")
   public static String convertToUsage(float data) {
-    return String.format("%.1f", data);     
+    return String.format("%.1f", data);
   }
-  
+
   /**
    * convert string as Integer
+   * 
    * @param string
    * @return int
    */
   public static int convertToInt(String value) {
     try {
       return Integer.parseInt(value);
-    } catch(Exception e) {}
+    } catch (Exception e) {
+    }
     return 0;
   }
-  
+
   /**
    * remove string from array , if it can't be converted to int
-   * @param string []
+   * 
+   * @param string
+   *          []
    * @return string []
    */
   public static String[] eraseNonIntegarString(String[] data) {
@@ -338,43 +372,50 @@ public class CommonUtil {
     }
     return checked.toArray(new String[checked.size()]);
   }
-  
+
   /**
    * remove empty string from array
-   * @param string []
+   * 
+   * @param string
+   *          []
    * @return string []
    */
   public static String[] eraseEmptyString(String[] data) {
     ArrayList<String> checked = new ArrayList<String>();
     for (int index = 0; index < data.length; index++) {
-      if(!data[index].trim().isEmpty())
+      if (!data[index].trim().isEmpty())
         checked.add(data[index]);
     }
     return checked.toArray(new String[checked.size()]);
   }
-  
+
   /**
    * detect background service is running or not
+   * 
    * @param context
    * @return running == ture, none == false
    */
-  public static boolean isServiceRunning(Context context){
-    final ActivityManager actMgr = (ActivityManager) context.getSystemService(Context.ACTIVITY_SERVICE);
-    final List<RunningServiceInfo> services = actMgr.getRunningServices(Integer.MAX_VALUE);
+  public static boolean isServiceRunning(Context context) {
+    final ActivityManager actMgr = (ActivityManager) context
+        .getSystemService(Context.ACTIVITY_SERVICE);
+    final List<RunningServiceInfo> services = actMgr
+        .getRunningServices(Integer.MAX_VALUE);
 
     for (RunningServiceInfo serviceInfo : services) {
-      if (serviceInfo.service.getClassName().equals(OSMonitorService.class.getName()))
+      if (serviceInfo.service.getClassName().equals(
+          OSMonitorService.class.getName()))
         return true;
     }
     return false;
   }
-  
+
   /**
    * For custom purposes. Not used by ColorPickerPreference
+   * 
    * @param color
    * @author Charles Rosaaen
-   * @return A string representing the hex value of color,
-   * without the alpha value
+   * @return A string representing the hex value of color, without the alpha
+   *         value
    */
   public static String convertToRGB(int color) {
     String red = Integer.toHexString(Color.red(color));
